# wr_robot

./: .gitignore  README.md  map_save.sh  rockpi.md  test,py
src/ackermann_amcl_plugin/: CMakeLists.txt  package.xml  plugins.xml
src/ackermann_amcl_plugin/include/ackermann_amcl_plugin/: ackermann_motion_model.hpp
src/ackermann_amcl_plugin/src/: ackermann_motion_model.cpp
src/lidar_undistortion/: CMakeLists.txt  package.xml  代码解析.md
src/lidar_undistortion/launch/: lidar_undistortion.launch.py
src/lidar_undistortion/src/: lidar_undistortion.cpp
src/ros2_wheeltec_n100_imu/: CMakeLists.txt
src/ros2_wheeltec_n100_imu/launch/: imu.launch.py
src/ros2_wheeltec_n100_imu/src/: imu_node.cpp
src/rplidar_ros/launch/: rplidar_launch.py  view_rplidar_a2m12_launch.py
src/slam_bringup/: CMakeLists.txt  package.xml
src/slam_bringup/config/: rplidar.lua
src/slam_bringup/launch/: cartographer.launch.py  slam_bringup.launch.py  static_tf.launch.py
src/teleop_acker_joy/: CMakeLists.txt  package.xml
src/teleop_acker_joy/launch/: teleop_joy.launch.py
src/turn_on_dlrobot_robot/: CMakeLists.txt  package.xml
src/turn_on_dlrobot_robot/launch/: tank.launch.py
src/turn_on_dlrobot_robot/src/: dlrobot_robot.cpp
src/ucar_bringup/: CMakeLists.txt  package.xml
src/ucar_bringup/launch/: localization.launch.py  nav.launch.py  rviz_launch.py  static_tf_map.launch.py  static_tf_pub.launch.py  ucar_bringup.launch.py  ucar_driver.launch.py
src/ucar_bringup/maps/: 20250401-1.pgm  20250401-1.yaml  4.16-2.pgm  (+10 more)
src/ucar_navigation/: CMakeLists.txt  package.xml
tools/: angle_counter.py  lidar_imu_calibration.py
(+42 files in other folders)
